# ftman

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  Pipfile  Procfile  README.md  dev-requirements.txt  manage.py  pyproject.toml  requirements.txt
ftman/: settings.py  tests.py  urls.py  views.py  wsgi.py
static/: base.css
static/registration/: login.css
templates/: base.html
templates/registration/: login.html
templates/tournament/: event_results.html  fencer_form.html  fencer_results.html  tournament_detail.html  tournament_list.html
tournament/: admin.py  factories.py  models.py  tests.py  urls.py  views.py
tournament/migrations/: 0001_initial.py  0002_auto_20190218_2100.py
